plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.9
targetCompatibility = 1.9

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.github.jnr:jnr-ffi:2.2.13'
    implementation 'com.github.jnr:jnr-constants:0.10.4'

    implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
    implementation 'io.netty:netty-buffer:4.1.87.Final'
    implementation 'org.agrona:agrona:1.17.1'
    implementation 'org.lmdbjava:lmdbjava-native-osx-x86_64:0.9.20-2'

    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation 'com.google.guava:guava:31.1-jre'
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.8.1"
}

test {
    useJUnitPlatform()
    jvmArgs = [
            //open up java nio to reflection and modification for lmdbjava
            '--add-opens=java.base/java.nio=lmdbjava',
            //open up the lmdb module for reflection to test
            '--add-opens=lmdbjava/org.lmdbjava=lmdbjava.test'
    ]

}